# OS2

./: .gitignore  CMakeLists.txt  OS2.sln  channelDevice.cpp  channelDevice.h  hardDisk.cpp  hardDisk.h  keyboard.cpp  keyboard.h  main.cpp  monitor.cpp  monitor.h  realMachine.cpp  realMachine.h  virtualMachine.cpp  virtualMachine.h
src/: main.cpp  procesuAprasai.cpp  procesuPrimityvai.h  resource.h  resursoPaskirstytojas.cpp  resursuPrimityvai.cpp  resursuPrimityvai.h
src/components/: channelDevice.cpp  channelDevice.h  hdd.txt  keyboard.cpp  monitor.cpp  realMachine.h  virtualMachine.cpp  virtualMachine.h
src/processes/: Interrupt.cpp  interrupt.h  jobGovernor.cpp  jobGovernor.h  loadNewProgram.cpp  loadNewProgram.h  printLine.cpp  printLine.h  process.h  resource.h  virtualMachine.cpp  virtualMachine.h  virtualMachineProcess.cpp  virtualMachineProcess.h
